# sticker-firmware

./: .gitignore  CALIBR.md  CLAUDE.md  CMakeLists.txt  Kconfig  LICENSE  Makefile  README.md  TODO.md  _app.overlay_  debug.conf  prj.conf  styleguide.md  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  Kconfig  LoRaWAN.md  Makefile  app.overlay  debug.conf  prj.conf
app/calibration/: flash.sh
app/decoder/: calibration.js  ttn.js
app/deploy/: sitcker-release.hex  sticker-debug.hex  sticker-input-agel-v1.0.0-release.hex  sticker-release.hex
app/production/: flash-debug.jlink  flash-release.jlink
app/src/: app_accel.c  app_accel.h  app_alarm.c  app_alarm.h  app_battery.c  app_battery.h  app_calibration.c  app_calibration.h  app_compose.c  app_compose.h  app_config.c  app_config.h  app_config.yml  app_ds18b20.c  app_ds18b20.h  app_hall.c  app_hall.h  app_input.c  app_input.h  app_led.c  app_led.h  app_log.h  app_lrw.c  app_lrw.h  app_machine_probe.c  (+32 more)
calibration/: firmware.hex  flash.jlink  requirements.txt
decoder/: ttn.js
deploy/: sticker-debug.hex  sticker-input-agel-v1.0.0-debug.hex  sticker-release.hex
drivers/: CMakeLists.txt  Kconfig
production/: flash-release.jlink  generate.py  run.sh
scripts/: west-commands.yml
src/: app_accel.c  app_accel.h  app_alarm.c  app_alarm.h  app_battery.c  app_battery.h  app_compose.c  app_compose.h  app_config.c  app_config.h  app_ds18b20.c  app_ds18b20.h  app_led.c  app_led.h  app_lrw.c  app_lrw.h  app_opt3001.c  app_opt3001.h  app_pyq1648.c  app_pyq1648.h  app_sensor.c  app_sensor.h  app_shell.c  app_sht40.c  app_sht40.h  app_tester.c  app_tester.h  app_w1.c  app_w1.h  app_wdog.c  app_wdog.h  main.c
tools/: log_sensors.sh  provision.sh
(+29 files in other folders)
